--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
         sdk: flutter
 
 dev_dependencies:
+    mockito: "4.0.0"
     test: "^1.4.0"
     flutter_test:
         sdk: flutter
